--- a/ParticleSystem/ParticleSystem.vcxproj
+++ b/ParticleSystem/ParticleSystem.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -155,6 +155,7 @@
     <ClCompile Include="GLDevice.cpp" />
     <ClCompile Include="GLRenderer.cpp" />
     <ClCompile Include="GLResourceManager.cpp" />
+    <ClCompile Include="ResourceManager.h" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Win32KeyboardInput.cpp" />
     <ClCompile Include="main.cpp" />
